tests/expectations/compiler/dynamic_call/dynamic_future_wrong_type_fail.out
Error [ETYC0372003]: Expected type `u32` but type `(u32, Final<Fn()>)` was found
    --> compiler-test:15:24
     |
  15 |         let val: u32 = Producer@(target)/produce(x);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
